# ruso-script

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: COMPILER.md  DSL_REFERENCE.md  EXAMPLES.md  OVERVIEW.md  README.md  RSL_REFERENCE.md
examples/: dns_resolve.ruso  dns_wire_a.ruso  dns_wire_txt.rsl  http_health.ruso  http_server_version_disclosure.rsl  http_server_version_disclosure.ruso  http_status_ok.rsl  tcp_http_banner.ruso  tcp_redis_unauth.rsl  tcp_redis_unauth.ruso  tcp_session_loop.ruso  tcp_ssh_banner.ruso  udp_echo.ruso  udp_ntp.rsl  udp_ntp.ruso
src/: compile.rs  lib.rs  spec_build.rs
src/script/: ast.rs  grammar.pest  grammar.rs  mod.rs  syntax_tests.rs
src/script/parser/: body.rs  helpers.rs  match_expr.rs  metadata.rs  mod.rs  probes.rs  socket.rs  statements.rs
