[package]
name = "ruso-script"
version = "0.1.0"
edition = "2024"
description = "Ruso DSL parser and compiler to ruso-runtime bytecode"
license = "Apache-2.0"

[lib]
name = "ruso_script"
path = "src/lib.rs"

[dependencies]
ruso-runtime = { git = "https://github.com/Hopeless-Labs/ruso-runtime.git", branch = "main" }
pest = "2.8.1"
pest_derive = "2.8.1"
thiserror = "2.0.12"
