[package]
name = "ruso-script"
version = "1.0.0"
edition = "2024"
description = "Ruso Scripting Language (RSL) parser and compiler to ruso-runtime bytecode"
license = "Apache-2.0"
documentation = "https://docs.ruso.hopeless-labs.com"

[lib]
name = "ruso_script"
path = "src/lib.rs"

[dependencies]
ruso-runtime = { git = "https://github.com/Hopeless-Labs/ruso-runtime.git", branch = "main" }
pest = "2.8.1"
pest_derive = "2.8.1"
thiserror = "2.0.12"

# Local dev override: if the sibling repo is checked out at ../ruso-runtime,
# cargo uses the local path instead of fetching from git. External contributors
# who only clone this repo will see a "patch not used" warning and fall back to
# the git dependency above — both paths build correctly.
[patch."https://github.com/Hopeless-Labs/ruso-runtime.git"]
ruso-runtime = { path = "../ruso-runtime" }
